syntax = "proto2";
package game;
//********************************常量枚举定义*********************************

enum MsgType {
    // 未知类型消息，用于解析MsgType失败时返回
    UNKNOWN_MSG     = 1;
}
