package game;
//********************************常量枚举定义*********************************

//错误码常量定义
enum E_ErrorCode {
    // 无错误
    NO_ERROR = 0;
    // 已在其他设备登陆
    LOGIN_ON_OTHER_DEVICE = 1;
}